added new device type portable media player

--- a/plugins/DevicesDetection/lang/en.json
+++ b/plugins/DevicesDetection/lang/en.json
@@ -30,6 +30,7 @@
         "PluginDescription": "This plugin provides extended information about mobile devices, such as Brand (manufacturer), Model (device version), better Device type detection (tv, consoles, smart phones, desktop, etc) and more. This plugin adds a new report in 'Visitors > Devices'.",
         "SmartDisplay": "Smart display",
         "Smartphone": "Smartphone",
+        "PortableMediaPlayer": "Portable media player",
         "submenu": "Devices",
         "Tablet": "Tablet",
         "TV": "Tv",
