refs #6022 added option to edit goal on goal page.
Added new attribute edit-url to enriched headline. Setting this will
make the headline clickable, on hover appears a title and pointer to
indicate that it is clickable and to explain what happens when clicking
on it. I think this is more intuitive than showing an edit icon on hover
which would be an alternative. As it is done in enriched headline we
could otherwise change the behaviour easily.

Also fixed feature name for goals no longer contains the actual goal
name.

--- a/plugins/Goals/lang/en.json
+++ b/plugins/Goals/lang/en.json
@@ -36,6 +36,7 @@
         "ConversionsOverviewBy": "Conversions overview by type of visit",
         "CreateNewGOal": "Create a new Goal",
         "DaysToConv": "Days to Conversion",
+        "Details": "Goal details",
         "DefaultGoalConvertedOncePerVisit": "(default) Goal can only be converted once per visit",
         "DefaultRevenue": "Goal default revenue is",
         "DefaultRevenueHelp": "For example, a Contact Form submitted by a visitor may be worth $10 on average. Piwik will help you understand how well your visitors segments are performing.",
