--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -3,6 +3,7 @@
         "CategoryNoData": "No data in this category. Try to \"Include all population\".",
         "CheckForUpdates": "Check for updates",
         "CheckPiwikOut": "Check Piwik out!",
+        "ClickToEditX": "Click to edit %s",
         "CloseWidgetDirections": "You can close this widget by clicking on the 'X' icon at the top of the widget.",
         "DataForThisReportHasBeenPurged": "The data for this report is more than %s months old and has been purged.",
         "DataTableExcludeAggregateRows": "Aggregate rows are shown %s Hide them",
