Tweak the Piwik PRO newsletter text

--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -50,7 +50,7 @@
         "RestartWebServer": "After making this change, restart your web server.",
         "ReusingTables": "Reusing the Tables",
         "PiwikOrgNewsletter": "email me with major Piwik community updates",
-        "PiwikProNewsletter": "I am interested in %sPiwik PRO%s services (no more than 1 email a month)",
+        "PiwikProNewsletter": "send me information on %sPiwik PRO%s services and offers",
         "SeeBelowForMoreInfo": "See below for more information.",
         "SetupWebsite": "Setup a Website",
         "SetupWebsiteError": "There was an error when adding the website",
