--- a/plugins/Live/lang/en.json
+++ b/plugins/Live/lang/en.json
@@ -21,7 +21,7 @@
         "NextVisitor": "Next visitor",
         "NoMoreVisits": "There are no more visits for this visitor.",
         "PageRefreshed": "Number of times this page was viewed \/ refreshed in a row.",
-        "PluginDescription": "Watch your visitors live in real-time!",
+        "PluginDescription": "Provides the live Visitor Log and lets you watch your visitors live in the real-time dashboard widget. The plugin also lets you see a Visitor profile for any given user.",
         "PreviousVisitor": "Previous visitor",
         "RealTimeVisitorCount": "Real Time Visitor Count",
         "Referrer_URL": "Referrer URL",
