--- a/plugins/Goals/lang/en.json
+++ b/plugins/Goals/lang/en.json
@@ -79,7 +79,7 @@
         "OverallRevenue": "%s overall revenue",
         "PageTitle": "Page Title",
         "Pattern": "Pattern",
-        "PluginDescription": "Create Goals and see reports about your goal conversions: evolution over time, revenue per visit, conversions per referrer, per keyword, etc.",
+        "PluginDescription": "Create Goals and see detailed reports about your goal conversions: evolution over time, revenue per visit, conversions per referrer, per keyword, and more.",
         "ProductCategory": "Product Category",
         "ProductName": "Product Name",
         "Products": "Products",
