--- a/plugins/Referrers/lang/en.json
+++ b/plugins/Referrers/lang/en.json
@@ -20,7 +20,7 @@
         "EvolutionDocumentationMoreInfo": "For more information about the different referrer types, see the documentation of the %s table.",
         "Keywords": "Keywords",
         "KeywordsReportDocumentation": "This report shows which keywords users were searching for before they were referred to your website. %s By clicking on a row in the table, you can see the distribution of search engines that were queried for the keyword.",
-        "PluginDescription": "Reports the Referrers data: Search Engines, Keywords, Websites, Campaign Tracking, Direct Entry.",
+        "PluginDescription": "Reports the Referrers data: Search Engines, Keywords, Websites, Campaigns, Social media, Direct entry.",
         "Referrer": "Referrer",
         "ReferrerName": "Referrer Name",
         "Referrers": "Referrers",
