--- a/plugins/UsersManager/lang/en.json
+++ b/plugins/UsersManager/lang/en.json
@@ -46,7 +46,7 @@
         "PersonalSettings": "Personal settings",
         "NoteNoAnonymousUserAccessSettingsWontBeUsed2": "Note: You cannot change the settings in this section, because you do not have any website that can be accessed by the anonymous user.",
         "NoUsersExist": "There are no users yet.",
-        "PluginDescription": "Users Management in Piwik: add a new User, edit an existing one, update the permissions. All the actions are also available through the API.",
+        "PluginDescription": "Users Management lets you add new users, edit existing users and assign them permissions to view or administrate websites. ",
         "PrivAdmin": "Admin",
         "PrivNone": "No access",
         "PrivView": "View",
