--- a/lang/de.json
+++ b/lang/de.json
@@ -31,12 +31,12 @@
         "ChooseWebsite": "Webseite wählen",
         "Clear": "Zurücksetzen",
         "ClickHere": "Klicken Sie hier für mehr Informationen.",
-        "ClickToChangePeriod": "Klicke erneut um den Zeitraum zu ändern.",
+        "ClickToChangePeriod": "Klicke erneut, um den Zeitraum zu ändern.",
         "Close": "Schließen",
         "ColumnActionsPerVisit": "Aktionen pro Besuch",
         "ColumnActionsPerVisitDocumentation": "Die durchschnittliche Anzahl der Aktionen (Seitenaufrufe, Downloads, ausgehende Verweise oder interne Suchen), die während der Besuche durchgeführt wurden.",
         "ColumnAverageGenerationTime": "Durchschnittliche Generierungszeit",
-        "ColumnAverageGenerationTimeDocumentation": "Die durchschnittliche Zeit die zur Generierung der Seite benötigt wurde. Diese Metrik beinhaltet die Zeit die der Server für die Generierung benötigte sowie die Zeit die der Besucher benötigte um die Antwort vom Server herunterzuladen. Eine niedrigere 'durchschnittliche Generierungszeit' bedeutet eine schnellere Webseite für Ihre Besucher!",
+        "ColumnAverageGenerationTimeDocumentation": "Die durchschnittliche Zeit, die zur Generierung der Seite benötigt wurde. Diese Metrik beinhaltet die Zeit, die der Server für die Generierung benötigte, sowie die Zeit, die der Besucher benötigte, um die Antwort vom Server herunterzuladen. Eine niedrigere 'durchschnittliche Generierungszeit' bedeutet eine schnellere Webseite für Ihre Besucher!",
         "ColumnAverageTimeOnPage": "Durchschnittszeit pro Seite",
         "ColumnAverageTimeOnPageDocumentation": "Die durchschnittliche Besuchdauer einer Seite (nur die einzelne Seite, nicht die gesamte Webseite)",
         "ColumnAvgTimeOnSite": "Durchschnittszeit auf der Webseite",
@@ -47,7 +47,7 @@
         "ColumnBounces": "Absprünge",
         "ColumnBouncesDocumentation": "Anzahl der Besuche, die auf dieser Seite begannen und endeten. D.h. der Besucher verließ die Webseite nach dem Aufruf dieser einen Seite wieder.",
         "ColumnConversionRate": "Konversionsrate",
-        "ColumnConversionRateDocumentation": "Prozentsatz der Besucher, die ein Zeil erreicht haben.",
+        "ColumnConversionRateDocumentation": "Prozentsatz der Besucher, die ein Ziel erreicht haben.",
         "ColumnDestinationPage": "Zielseite",
         "ColumnEntrances": "Eingänge",
         "ColumnEntrancesDocumentation": "Anzahl der Besuche, die auf dieser Seite begonnen haben.",
@@ -129,23 +129,23 @@
         "Download": "Download",
         "DownloadFail_FileExists": "Die Datei %s existiert bereits!",
         "DownloadFail_FileExistsContinue": "Es wurde versucht den Download von %s fortzusetzen, allerdings existiert bereits eine komplett heruntergeladene Datei!",
-        "DownloadFail_HttpRequestFail": "Konnte die Datei nicht herunterladen! Möglicherweise ist die Webseite von der Sie herunterladen möchten nicht einsatzbereit. Sie können es später noch einmal probieren oder die Datei selbständig herunterladen.",
+        "DownloadFail_HttpRequestFail": "Konnte die Datei nicht herunterladen! Möglicherweise ist die Webseite, von der Sie herunterladen möchten, nicht einsatzbereit. Sie können es später noch einmal probieren oder die Datei selbständig herunterladen.",
         "DownloadFullVersion": "%1$sLaden%2$s Sie jetzt die Vollversion! Siehe %3$s",
         "DownloadPleaseRemoveExisting": "Soll diese ersetzt werden, muss die existierende Datei gelöscht werden.",
         "Downloads": "Downloads",
         "EcommerceOrders": "Ecommerce Bestellungen",
         "EcommerceVisitStatusDesc": "Ecommerce Status am Ende des Besuchs",
-        "EcommerceVisitStatusEg": "Um z.B. alle Besuche auszuwählen, die eine Bestellung aufgegeben haben, würde die API-Anfrage Folgendes beinhalten: %s",
+        "EcommerceVisitStatusEg": "Um z.B. alle Besuche auszuwählen, die eine Bestellung aufgegeben haben, würde die API-Anfrage folgendes beinhalten: %s",
         "Edit": "Ändern",
         "EncryptedSmtpTransport": "Geben Sie hier die von Ihrem SMTP-Server benötigte Verschlüsselung ein.",
         "EnglishLanguageName": "German",
         "Error": "Fehler",
-        "ErrorRequest": "Oops… während der Anfrage ist ein Problem aufgetreten. Möglicherweise war der Server temporär überlastet, oder eventuell haben Sie einen Bericht mit zu vielen Daten angefordert. Bitte noch einmal versuchen. Wenn dieser Fehler wiederholt auftritt %skontaktieren Sie bitte Ihren Piwik Administrator%s um Unterstützung zu erhalten.",
+        "ErrorRequest": "Oops… während der Anfrage ist ein Problem aufgetreten. Möglicherweise war der Server temporär überlastet, oder eventuell haben Sie einen Bericht mit zu vielen Daten angefordert. Bitte noch einmal versuchen. Wenn dieser Fehler wiederholt auftritt %skontaktieren Sie bitte Ihren Piwik Administrator%s, um Unterstützung zu erhalten.",
         "EvolutionOverPeriod": "Entwicklung über den Zeitraum",
         "EvolutionSummaryGeneric": "%1$s in %2$s verglichen mit %3$s in %4$s. Entwicklung: %5$s",
         "ExceptionCheckUserHasSuperUserAccessOrIsTheUser": "Der Benutzer muss entweder ein Hauptadministrator sein oder der Benutzer '%s'.",
         "ExceptionConfigurationFileNotFound": "Die Konfigurationsdatei {%s} wurde nicht gefunden.",
-        "ExceptionContactSupportGeneric": "Falls dieses Problem weiterhin besteht %skontaktieren Sie bitte Ihren Piwik Administrator%s für Unterstützung.",
+        "ExceptionContactSupportGeneric": "Falls dieses Problem weiterhin besteht, %skontaktieren Sie bitte Ihren Piwik Administrator%s für Unterstützung.",
         "ExceptionDatabaseVersion": "Ihre %1$s-Version ist %2$s, aber Piwik benötigt mindestens %3$s",
         "ExceptionDatabaseVersionNewerThanCodebase": "Ihre Piwik Codebase läuft auf der alten Version %1$s und wir haben erkannt, dass Ihre Piwik Datenbank bereits auf die neuere Version %2$s aktualisiert wurde.",
         "ExceptionDatabaseVersionNewerThanCodebaseWait": "Möglicherweise sind die Piwik Administratoren gerade daran, den Aktualisierungsprozess abzuschliessen. Bitte versuchen Sie es in ein paar Minuten noch einmal.",
@@ -168,7 +168,7 @@
         "ExceptionPrivilege": "Sie können auf die Ressource nicht zugreifen, da Sie dafür mindestens %s Rechte benötigen.",
         "ExceptionPrivilegeAccessWebsite": "Sie können auf diese Ressource nicht zugreifen, da es mindestens %s-Rechte für die Webseiten-ID %d benötigt.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Sie können auf diese Ressource nicht zugreifen, da eine %s Berechtigung für mindestens eine Webseite benötigt wird.",
-        "ExceptionReportNotEnabled": "Der gesuchte Bericht ist nicht aktiviert. Das bedeutet normalerweise entweder dass das Plugin welches den Bericht definiert deaktiviert ist oder Sie haben nicht die benötigten Berechtigungen um diesen Bericht einzusehen.",
+        "ExceptionReportNotEnabled": "Der gesuchte Bericht ist nicht aktiviert. Das bedeutet normalerweise entweder, dass das Plugin, welches den Bericht definiert, deaktiviert ist oder Sie haben nicht die benötigten Berechtigungen, um diesen Bericht einzusehen.",
         "ExceptionReportNotFound": "Der gesuchte Bericht existiert nicht.",
         "ExceptionUnableToStartSession": "Starten einer Session nicht möglich.",
         "ExceptionUndeletableFile": "Kann %s nicht löschen.",
@@ -194,11 +194,11 @@
         "GraphHelp": "Mehr Informationen über die Darstellung von Graphen in Piwik.",
         "HelloUser": "Hallo, %s!",
         "Help": "Hilfe",
-        "HelpTranslatePiwik": "Möchten Sie uns %1$shelfen die Übersetzungen von Piwik zu verbessern%2$s?",
+        "HelpTranslatePiwik": "Möchten Sie uns %1$shelfen, die Übersetzungen von Piwik zu verbessern%2$s?",
         "Hide": "verbergen",
         "HoursMinutes": "%1$s Stunden %2$s Minuten",
         "Id": "Id",
-        "IfArchivingIsFastYouCanSetupCronRunMoreOften": "Wenn der Archivierungsprozess nicht zu viel Zeit in Anspruch nimmt, können Sie den Cronjob so konfigurieren, dass die Archivierung häufiger gemacht wird.",
+        "IfArchivingIsFastYouCanSetupCronRunMoreOften": "Wenn der Archivierungsprozess nicht zu viel Zeit in Anspruch nimmt, können Sie den Cronjob so konfigurieren, dass die Archivierung häufiger durchgeführt wird.",
         "InfoFor": "Informationen über %s",
         "Installed": "Installiert",
         "InvalidDateRange": "Ungültiger Zeitraum. Bitte versuchen Sie es erneut",
