Reviewed german translation from N till end

--- a/lang/de.json
+++ b/lang/de.json
@@ -389,7 +389,7 @@
         "SmtpServerAddress": "SMTP-Server-Adresse",
         "SmtpUsername": "SMTP-Benutzername",
         "Source": "Quelle",
-        "StatisticsAreNotRecorded": "Das Besuchertracking von Piwik ist derzeit deaktiviert! Reaktivieren Sie das Tracking indem Sie in der Datei config\/config.ini.php record_statistics = 1 setzen.",
+        "StatisticsAreNotRecorded": "Das Besuchertracking von Piwik ist derzeit deaktiviert! Reaktivieren Sie das Tracking, indem Sie in der Datei config\/config.ini.php record_statistics = 1 setzen.",
         "Subtotal": "Zwischensumme",
         "Summary": "Zusammenfassung",
         "Table": "Tabelle",
@@ -436,7 +436,7 @@
         "WarningFileIntegrityNoMd5file": "Durch die fehlende md5_file() Funktion konnte die Integritätsprüfung nicht durchgeführt werden.",
         "WarningPasswordStored": "%sWarnung:%s Dieses Passwort wird in der Konfigurationsdatei gespeichert und ist so für jeden sichtbar, der auf diese Datei Zugriff hat.",
         "WarningPhpVersionXIsTooOld": "Die von Ihnen eingesetzte PHP Version %s hat das Ende der Lebensdauer (EOL) erreicht. Es wird dringend angeraten, ein Update auf eine aktuelle Version durchzuführen, da der Einsatz dieser Version zu Sicherheitsrisiken und Fehlern führen kann, welche in neueren PHP Versionen korrigiert wurden.",
-        "WarningPiwikWillStopSupportingPHPVersion": "Piwik wird die Unterstützung für diese PHP Version im %s einstellen. Aktualisieren Sie ihre PHP Version bevor es zu spät ist!",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik wird die Unterstützung für diese PHP Version im %s einstellen. Aktualisieren Sie ihre PHP Version, bevor es zu spät ist!",
         "Website": "Webseite",
         "Weekly": "Wöchentlich",
         "WeeklyReport": "wöchentlich",
@@ -466,8 +466,8 @@
         "AddPiwikDemo": "Piwik Demo hinzufügen",
         "Advanced": "Erweitert",
         "AnonymousAccess": "Anonymer Zugriff",
-        "AnonymousTracking": "Anonymes aufzeichnen",
-        "AskForAnonymousTrackingPermission": "Falls aktiviert sendet Piwik Mobile anonyme Nutzungsdaten an piwik.org. Die Sammlung dieser Daten hilft den Piwik Mobile Entwicklern besser zu verstehen wie diese Applikation genutzt wird. Folgende Informationen werden gesendet: Menüs und Einstellungen, Betriebssystemname und Version und angezeigte Fehler in Piwik Mobile. Es werden KEINE Analytischen Daten aufgezeichnet. Die Anonymen Daten werden niemals der Öffentlichkeit zugänglich gemacht. Anonyme Nutzungsdatenerfassung kann jederzeit in den Einstellungen wieder aktiviert bzw. deaktiviert werden.",
+        "AnonymousTracking": "Anonymes Aufzeichnen",
+        "AskForAnonymousTrackingPermission": "Falls aktiviert sendet Piwik Mobile anonyme Nutzungsdaten an piwik.org. Die Sammlung dieser Daten hilft den Piwik Mobile Entwicklern besser zu verstehen, wie diese Applikation genutzt wird. Folgende Informationen werden gesendet: Menüs und Einstellungen, Betriebssystemname und Version und angezeigte Fehler in Piwik Mobile. Es werden KEINE analytischen Daten aufgezeichnet. Die snonymen Daten werden niemals der Öffentlichkeit zugänglich gemacht. Anonyme Nutzungsdatenerfassung kann jederzeit in den Einstellungen wieder aktiviert bzw. deaktiviert werden.",
         "ChooseHttpTimeout": "Wählen Sie einen Wert für den HTTP Timeout",
         "ChooseMetric": "Wähle Metrik",
         "ChooseReport": "Wählen Sie einen Bericht",
@@ -478,25 +478,25 @@
         "EnableGraphsLabel": "Graphen anzeigen",
         "EvolutionGraph": "Historischer Graph",
         "HelpUsToImprovePiwikMobile": "Anonyme Nutzungsdaten in Piwik Mobile aktivieren?",
-        "HowtoDeleteAnAccount": "Drücken Sie lange um einen Account zu entfernen.",
-        "HowtoDeleteAnAccountOniOS": "Von rechts nach links wischen um einen Account zu löschen",
+        "HowtoDeleteAnAccount": "Drücken Sie lange, um einen Account zu entfernen.",
+        "HowtoDeleteAnAccountOniOS": "Von rechts nach links wischen, um einen Account zu löschen",
         "HowtoLoginAnonymous": "Benutzername und Passwort leer lassen für anonymes anmelden",
         "HttpIsNotSecureWarning": "Bei der Verwendung von HTTP wird ihr Piwik Authorisierungstoken (token_auth) im Klartext übertragen. Aus diesem Grund empfehlen wir HTTPS für eine sichere Übertragung von Daten über das Internet. Möchten Sie forfahren?",
         "HttpTimeout": "HTTP Timeout",
         "IgnoreSslError": "Ignoriere SSL Fehler",
-        "IncompatiblePiwikVersion": "The Piwik Version die Sie verwenden ist nicht mit Piwik Mobile 2 kompatibel. Aktualisieren Sie Ihre Piwik Installation oder verwenden Sie alternativ Piwik Mobile 1.",
+        "IncompatiblePiwikVersion": "The Piwik Version, die Sie verwenden, ist nicht mit Piwik Mobile 2 kompatibel. Aktualisieren Sie Ihre Piwik Installation oder verwenden Sie alternativ Piwik Mobile 1.",
         "LastUpdated": "Letzte Aktualisierung: %s",
         "LoadingReport": "Lade %s",
         "LoginCredentials": "Zugangsdaten",
-        "LoginToPiwikToChangeSettings": "Melden Sie sich in Piwik an um Webseiten und User zu erstellen und zu aktualisieren oder um allgemeine Einstellungen wie \"Bericht, der standardmäßig geladen wird\" zu ändern.",
+        "LoginToPiwikToChangeSettings": "Melden Sie sich in Piwik an, um Webseiten und User zu erstellen und zu aktualisieren oder um allgemeine Einstellungen wie \"Bericht, der standardmäßig geladen wird\" zu ändern.",
         "LoginUseHttps": "Benutze HTTPS",
         "MultiChartLabel": "Multisite Graphen anzeigen",
         "NavigationBack": "Zurück",
         "NetworkError": "Netzwerkfehler",
-        "NetworkErrorWithStatusCode": "Folgender Fehler trat auf \"%s\". Die Anfrage gab den Status \"%s\" zurück. URL war \"%s\". Bitte die eingegebene URL überprüfen und die Fehlerlog Dateien auf dem Server überprüfen um mehr Informationen zu diesem Fehler und wie er zu beheben ist zu erfahren.",
+        "NetworkErrorWithStatusCode": "Folgender Fehler trat auf \"%s\". Die Anfrage gab den Status \"%s\" zurück. URL war \"%s\". Bitte die eingegebene URL überprüfen und die Fehlerlog Dateien auf dem Server überprüfen, um mehr Informationen zu diesem Fehler und wie er zu beheben ist, zu erfahren.",
         "NetworkErrorWithStatusCodeShort": "Netzwerkfehler %s",
         "NetworkNotReachable": "Netzwerk ist nicht erreichbar",
-        "NoAccountIsSelected": "Kein Zugang ausgewählt. Fügen Sie einen neuen Account hinzu wenn Sie keinen konfiguriert haben.",
+        "NoAccountIsSelected": "Kein Zugang ausgewählt. Fügen Sie einen neuen Account hinzu, wenn Sie keinen konfiguriert haben.",
         "NoDataShort": "Keine Daten",
         "NoPiwikAccount": "Kein Piwik Account?",
         "NoReportsShort": "Keine Berichte",
@@ -505,17 +505,17 @@
         "NoWebsiteFound": "Webseite nicht gefunden",
         "NoWebsitesShort": "Keine Webseiten",
         "PossibleSslError": "Möglicher SSL Zertifikat Fehler",
-        "PossibleSslErrorExplanation": "Ein Fehler ist aufgetreten welcher durch ein invalides oder selbst signiertes SSL Zertifikat verursacht sein könnte: \"%s\". Die Anmeldung könnte funktionieren indem die Validierung des SSL Zertifikat ignoriert wird aber es ist weniger sicher. Die Einstellung kann jederzeit nachträglich geändert werden.",
+        "PossibleSslErrorExplanation": "Ein Fehler ist aufgetreten, welcher durch ein invalides oder selbst signiertes SSL Zertifikat verursacht sein könnte: \"%s\". Die Anmeldung könnte funktionieren, indem die Validierung des SSL Zertifikat ignoriert wird, aber es ist weniger sicher. Die Einstellung kann jederzeit nachträglich geändert werden.",
         "PullDownToRefresh": "Zum Aktualisieren herunterziehen...",
         "RatingDontRemindMe": "Bitte nicht daran erinnern",
         "RatingNotNow": "Nicht jetzt",
         "RatingNow": "OK, ich bewerte es jetzt",
-        "RatingPleaseRateUs": "Piwik Mobile App ist Freie Software, wir würden es sehr zu schätzen wissen, wenn Sie 1 Minute Ihrer wertvollen Zeit opfern würden um diese App im %s zu bewerten. Falls Sie Vorschläge für neue Features haben oder Fehler melden möchten, bitte kontaktieren Sie %s",
+        "RatingPleaseRateUs": "Piwik Mobile App ist Freie Software, wir würden es sehr zu schätzen wissen, wenn Sie 1 Minute Ihrer wertvollen Zeit opfern würden, um diese App im %s zu bewerten. Falls Sie Vorschläge für neue Features haben oder Fehler melden möchten, bitte kontaktieren Sie %s",
         "ReleaseToRefresh": "Zum Aktualisieren loslassen...",
         "Reloading": "Wird neu geladen...",
         "RequestTimedOutShort": "Netzwerk Zeitüberschreitung",
         "RestrictedCompatibility": "Eingeschränkte Kompatibilität",
-        "RestrictedCompatibilityExplanation": "Die Piwik Version %s die Sie verwenden wird nicht vollständig von Piwik Mobile 2 unterstützt. Es könnten Bugs auftreten. Wir empfehlen Piwik auf die neueste Version zu aktualisieren oder Piwik Mobile 1 zu verwenden.",
+        "RestrictedCompatibilityExplanation": "Die Piwik Version %s, die Sie verwenden, wird nicht vollständig von Piwik Mobile 2 unterstützt. Es könnten Bugs auftreten. Wir empfehlen Piwik auf die neueste Version zu aktualisieren oder Piwik Mobile 1 zu verwenden.",
         "SaveSuccessError": "Piwik URL oder Benutzername-\/Passwort-Kombination ist falsch.",
         "SearchWebsite": "Webseiten durchsuchen",
         "ShowAll": "Alle anzeigen",
@@ -531,10 +531,10 @@
     },
     "RowEvolution": {
         "AvailableMetrics": "Verfügbare Metriken",
-        "CompareDocumentation": "Klicken Sie auf den Link unten und öffnen Sie dieses Popup für eine andere Zeile aus der selben Tabelle um mehrere Einträge zu vergleichen.<br \/>Verwenden Sie Shift-Klick um die Zeile für den Vergleich zu markieren ohne dieses Popup zu öffnen.",
+        "CompareDocumentation": "Klicken Sie auf den Link unten und öffnen Sie dieses Popup für eine andere Zeile aus der selben Tabelle, um mehrere Einträge zu vergleichen.<br \/>Verwenden Sie Shift-Klick, um die Zeile für den Vergleich zu markieren, ohne dieses Popup zu öffnen.",
         "CompareRows": "Vergleiche Einträge",
         "ComparingRecords": "Vergleiche %s Zeilen",
-        "Documentation": "Klicken Sie auf die Metriken um sie im großen Entwicklungs-Graphen zu sehen. Verwenden Sie Shift-Klick um mehrere Metriken gleichzeitig zu sehen.",
+        "Documentation": "Klicken Sie auf die Metriken, um sie im großen Entwicklungs-Graphen zu sehen. Verwenden Sie Shift-Klick, um mehrere Metriken gleichzeitig zu sehen.",
         "MetricBetweenText": "zwischen %s und %s",
         "MetricChangeText": "%s über den Zeitraum",
         "MetricMinMax": "%1$s bewegte sich während dem Zeitraum zwischen %2$s und %3$s",
