--- a/plugins/SitesManager/lang/en.json
+++ b/plugins/SitesManager/lang/en.json
@@ -64,6 +64,8 @@
         "ShowTrackingTag": "View Tracking code",
         "Sites": "Websites",
         "SiteSearchUse": "You can use Piwik to track and report what visitors are searching in your website's internal search engine.",
+        "SiteWithoutDataTitle": "No data is recorded yet",
+        "SiteWithoutDataHelp": "No analytics data has been tracked for this website yet. Please set up the JavaScript tracking code on your website and refresh the page.",
         "SuperUserAccessCan": "A user with Super User access can also %s specify global settings%s for new websites.",
         "Timezone": "Time zone",
         "TrackingSiteSearch": "Tracking Internal Site Search",
