--- a/lang/en.json
+++ b/lang/en.json
@@ -233,6 +233,7 @@
         "GraphHelp": "More information about displaying graphs in Matomo.",
         "HelloUser": "Hello, %s!",
         "Help": "Help",
+        "HelpResources": "Help resources",
         "HelpTranslatePiwik": "Maybe you would like to %1$shelp us improve the Matomo translations%2$s?",
         "Hide": "hide",
         "HoursMinutes": "%1$s hours %2$s min",
