Display a different message on login page if session has expired

--- a/lang/en.json
+++ b/lang/en.json
@@ -492,6 +492,7 @@
         "YouAreViewingDemoMessage": "You are viewing the demo of %1$sMatomo%2$s",
         "YouMustBeLoggedIn": "You must be logged in to access this functionality.",
         "YourChangesHaveBeenSaved": "Your changes have been saved.",
+        "YourSessionHasExpired": "Your session has expired. Please log in to continue.",
         "ThankYouForUsingMatomo": "Thank you for using Matomo",
         "TheMatomoTeam": "The Matomo Team",
         "PleaseTryAgain": "Please try again"
