--- a/plugins/Actions/lang/en.json
+++ b/plugins/Actions/lang/en.json
@@ -1,8 +1,8 @@
 {
     "Actions": {
         "AvgGenerationTimeTooltip": "Average based on %1$s hit(s) %2$s between %3$s and %4$s",
-        "ColumnClickedURL": "Clicked URL",
-        "ColumnClickedURLs": "Clicked URLs",
+        "ColumnClickedURL": "Clicked Outlink",
+        "ColumnClickedURLs": "Clicked Outlinks",
         "ColumnActionURL": "Action URL",
         "ColumnClicks": "Clicks",
         "ColumnClicksDocumentation": "The number of times this link was clicked.",
