--- a/plugins/CoreAdminHome/lang/en.json
+++ b/plugins/CoreAdminHome/lang/en.json
@@ -133,6 +133,8 @@
         "ConfirmDeleteThisTrackingFailure": "Are you sure you want to delete this tracking failure?",
         "TrackingFailuresEmailSubject": "Tracking failures in your Matomo Analytics",
         "TrackingFailuresEmail1": "This is just to let you know that %s different kinds of tracking failures have occurred in the last days.",
-        "TrackingFailuresEmail2": "To view all the failed tracking requests %1$sclick here%2$s."
+        "TrackingFailuresEmail2": "To view all the failed tracking requests %1$sclick here%2$s.",
+        "ImportFromGoogleAnalytics": "Import from Google Analytics",
+        "ImportFromGoogleAnalyticsDescription": "If you have a Google Analytics property and are switching to Matomo, you can import your existing data using the %1$sGoogleAnalyticsImporter%2$s plugin."
     }
 }
