Add "test" button to segment editor (#14884)
* Take user to the visitors log after adding new segment from segmented visitors log

* Apply segment when displaying visitor log while creating new segment

* Add the test segment button

* Fix JS error

* Remove debugger statements

* Display test visitor log in popover when user clicks Test Segment button

* Update test screenshots

* Hide datatable controls on popover visitor log; prevent Esc key from closing segment editor when popover is open

* Close "test" popover when user presses escape key

* Close the PiwikPopover when user clicks away from it

--- a/plugins/SegmentEditor/lang/en.json
+++ b/plugins/SegmentEditor/lang/en.json
@@ -55,6 +55,7 @@
         "AddThisToMatomo": "Add this segment to Matomo",
         "ThisSegmentIsCompared": "This segment is currently compared.",
         "ThisSegmentIsSelectedAndCannotBeCompared": "This segment is currently selected so cannot be selected to compare.",
-        "CompareThisSegment": "Compare this segment with the selected segment and period."
+        "CompareThisSegment": "Compare this segment with the selected segment and period.",
+        "Test": "Test"
     }
 }
